[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/ActiveBountyProgress.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="ActiveBountyProgress" type="Button"]
anchor_right = 0.249
anchor_bottom = 0.032
margin_right = 40.64
margin_bottom = -0.719999
rect_min_size = Vector2( 200, 30 )
custom_styles/normal = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Label" type="Label" parent="."]
margin_left = 74.6992
margin_top = 6.28661
margin_right = 172.699
margin_bottom = 20.2866
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 9.45984
margin_top = 6.28661
margin_right = 49.4598
margin_bottom = 20.2866
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="." to="." method="_on_ActiveBountyProgress_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="value_changed" from="ProgressBar" to="." method="_on_ProgressBar_value_changed"]
